--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "ramsey/uuid": "^3.7",
     "zendframework/zend-hydrator": "^2.3",
     "zendframework/zend-filter": "^2.7",
-    "zendframework/zend-servicemanager": "^3.3"
+    "zendframework/zend-servicemanager": "^3.3",
+    "php-amqplib/php-amqplib": "^2.7"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5@dev",
